crates/shep-cli/src/lookout/snapshots/shep__lookout__frames__tests__filter_no_match.snap
---
source: crates/shep-cli/src/lookout/frames.rs
expression: render_text(&buffer)
---
shep lookout   /home/rin/.shep                                                   0 of 6 in the flock
host  load 2.31 4.10 3.88 / 10 cores   host mem 12.4G / 32.0G   flock cpu 14.7%   flock mem 716.0M …
  ID    NAME               STATUS           PID      RESTARTS  EXIT       CPU     MEM       UPTIME  
────────────────────────────────────────────────────────────────────────────────────────────────────
no sheep's name contains "zzz"                                                                      
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
filter  zzz▏   enter applies   esc cancels   ctrl-c quits                                  read-only
